# Thesis

./: .gitignore  README.md  bitacora.txt
CAD_MODELS/ACTUAL_SET_UP/: Wheelchair_ActualSetUp.f3d  Wheelchair_ActualSetUp.stl
CAD_MODELS/ACTUAL_SET_UP/Wheelchair_ActualSetUp_description/: CMakeLists.txt  package.xml
CAD_MODELS/ACTUAL_SET_UP/Wheelchair_ActualSetUp_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch
CAD_MODELS/ACTUAL_SET_UP/Wheelchair_ActualSetUp_description/meshes/: front_Lidar_1.stl  left_Wheel_1.stl  left_caster_support_1.stl  rear_caster_2_1.stl  rear_caster_support_1.stl  right_Wheel_1.stl  right_caster_2_1.stl
CAD_MODELS/ACTUAL_SET_UP/Wheelchair_ActualSetUp_description/urdf/: Wheelchair_ActualSetUp.gazebo  Wheelchair_ActualSetUp.trans  Wheelchair_ActualSetUp.xacro  materials.xacro
Documentation/: Jetson_StartUp.txt
Documentation/Jetson_Installation_Process/: Jetson_SetUp(SSD)_configuration.md  drivers_installation_report.md
Documentation/ros2_jetson_installation/: drivers_versions.md  ros2_installation_report.docx  ros2_installation_report.md
MPC_MATLAB/: FHOCP.asv  FHOCP.m  FHOCP2.m  MPC.m  MPC_mask.xml  MPCparking.m  ParkingRobotModel.mlx  RobotModel.mlx  RobotSim.slx  RobotSim.slxc  RobotSimParking.slx  RobotSimParking.slxc  model_Robot_pointP.m  mpcDummies.m  transformationMatrix.m  untitled.slx.autosave
MPC_MATLAB/slprj/_cgxe/RobotSim/info/: report.mldatx
MPC_MATLAB/slprj/_cgxe/RobotSimParking/info/: report.mldatx
MPC_MATLAB/slprj/_cgxe/TwoTank_OpenLoop/info/: report.mldatx
MPC_MATLAB/slprj/_jitprj/: jitEngineAccessInfo.mat  sJROQZsxDBszNIZrGBnbe6D.mat  sJf1FKbl7YKpizz1SDPFH8G.l  sJf1FKbl7YKpizz1SDPFH8G.mat  sQycDY8DqKeMf2WOMu8QJiD.l  sQycDY8DqKeMf2WOMu8QJiD.mat  sSQzy1ETen3BeOMISS4JjbE.l  sSQzy1ETen3BeOMISS4JjbE.mat  sf6a1aS0yRBSIyx4zPuAcjF.l  sf6a1aS0yRBSIyx4zPuAcjF.mat  ssyvSLRsYGXU72NXgsYBcmB.l  ssyvSLRsYGXU72NXgsYBcmB.mat  st0ByRktzTzCtG2SKDcdM7B.l  st0ByRktzTzCtG2SKDcdM7B.mat  suqhjiAKTMlpVDzmEGCEWhD.l  suqhjiAKTMlpVDzmEGCEWhD.mat
MPC_MATLAB/slprj/_sfprj/EMLReport/: 6M5f6rhawOHsUswxr3pEYE.mat  FqSZQTH16ErasvkDZSoLR.mat  emlReportAccessInfo.mat  sJROQZsxDBszNIZrGBnbe6D.mat  sJf1FKbl7YKpizz1SDPFH8G.mat  sLVgtiWfYlPtYfmLxxDpmKE.mat  sQycDY8DqKeMf2WOMu8QJiD.mat  sSQzy1ETen3BeOMISS4JjbE.mat  sf6a1aS0yRBSIyx4zPuAcjF.mat  shrAG0GYNpMDAzHTY3aQP7C.mat  ssyvSLRsYGXU72NXgsYBcmB.mat  st0ByRktzTzCtG2SKDcdM7B.mat  suqhjiAKTMlpVDzmEGCEWhD.mat  vjca1PZnc0hooImCR2pd6D.mat
MPC_MATLAB/slprj/_sfprj/RobotSim/: amsi_serial.mat
MPC_MATLAB/slprj/_sfprj/TwoTank_OpenLoop/: amsi_serial.mat
MPC_MATLAB/slprj/_sfprj/precompile/: 4hyxZZxJOtbCYIqGiaUFcH.mat  7jiTXpyIXhhWDjHl1sqrdF.mat  8zSJG1kV22XrLN0BEXoUBF.mat  A0CQ1dKmqkx2etPSiLA0DC.mat  BrPJNWKgq72kDHIlTYQ8rB.mat  JScKtOk3p2WnQ7bgOQedZ.mat  Kvftkm3nBUfGqFdhIfWGVE.mat  NyCffkEfoOsupMEeyoF2SE.mat  Qyrh6WaQkwrQbgn4TSFBCF.mat  VH261rnH2jfa39wT246tEE.mat  WP7HE8bhhTCwwtdXR9uiFB.mat  autoInferAccessInfo.mat  dydBDII76tUsBmNGeoEQEH.mat  flVKFIkWMvZTne9j4Y8xGG.mat  iVMPopd7WlRjo8kf0lmHsH.mat  nxOVuwDsggSlifNFpYxqSF.mat  trZnYLY3RVLHYnO1MhINFF.mat  vYdmiBVWMHEuixRAe7wrZF.mat
MPC_MATLAB/slprj/sim/varcache/RobotSim/: checksumOfCache.mat  varInfo.mat
MPC_MATLAB/slprj/sim/varcache/RobotSimParking/: checksumOfCache.mat  varInfo.mat
Wc_Integration/docker/: old
Wc_Integration/docker/ARM_Jetson/: .env  docker-compose.yml  entrypoint.sh
Wc_Integration/docker/x86_PC/: .dockerignore  .env  Dockerfile  docker-compose.yml
thesis_ws/src/bags/fusion_sensor/: TimestampsCorrector.py  convert.yaml
thesis_ws/src/gazebo/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
thesis_ws/src/gazebo/log/: latest_build
thesis_ws/src/gazebo/wheelchair_actual_set_up_description/: CMakeLists.txt  package.xml
thesis_ws/src/gazebo/wheelchair_actual_set_up_description/config/: ros2_controllers.yaml  ros_gz_bridge.yaml  wheelchair_sim.rviz
thesis_ws/src/gazebo/wheelchair_actual_set_up_description/launch/: controller.launch.py  display.launch.py  gazebo.launch.py  urdf.rviz
thesis_ws/src/gazebo/wheelchair_actual_set_up_description/memory/: feedback_cpp_nodes.md
thesis_ws/src/gazebo/wheelchair_actual_set_up_description/meshes/: base_link.stl  front_Lidar_1.stl  left_Wheel_1.stl  left_caster_1_1.stl  left_caster_2_1.stl  left_caster_support_1.stl  rear_caster_1_1.stl  rear_caster_2_1.stl  rear_caster_3_1.stl  rear_caster_4_1.stl  rear_caster_support_1.stl  rear_lidar_1.stl  right_Wheel_1.stl  right_caster_1_1.stl  right_caster_2_1.stl  right_caster_support_1.stl
thesis_ws/src/gazebo/wheelchair_actual_set_up_description/src/: odom_tf_broadcaster.cpp  topic_relay.cpp  world_markers_publisher.cpp
thesis_ws/src/gazebo/wheelchair_actual_set_up_description/urdf/: materials.xacro  wheelchair_actual_set_up.gazebo  wheelchair_actual_set_up.trans  wheelchair_actual_set_up.xacro
thesis_ws/src/gazebo/wheelchair_actual_set_up_description/worlds/: wheelchair_world.sdf
thesis_ws/src/sensorFusion/lidar_camera_fusion_pcl/: CMakeLists.txt  package.xml
thesis_ws/src/sensorFusion/lidar_camera_fusion_pcl/config/: fusion_pcl_params.yaml
thesis_ws/src/sensorFusion/lidar_camera_fusion_pcl/include/lidar_camera_fusion_pcl/: cloud_filter_node.hpp  cloud_merge_node.hpp
thesis_ws/src/sensorFusion/lidar_camera_fusion_pcl/launch/: fusion_pcl.launch.py
thesis_ws/src/sensorFusion/lidar_camera_fusion_pcl/rviz/: fusion_pcl.rviz
thesis_ws/src/sensorFusion/lidar_camera_fusion_pcl/src/: cloud_filter_node.cpp  cloud_merge_node.cpp
thesis_ws/src/sensorFusion/lidar_camera_object_association/: CMakeLists.txt  README.md  package.xml
thesis_ws/src/sensorFusion/lidar_camera_object_association/config/: params.yaml
thesis_ws/src/sensorFusion/lidar_camera_object_association/include/lidar_camera_object_association/: association_utils.hpp
thesis_ws/src/sensorFusion/lidar_camera_object_association/launch/: fusion.launch.py
thesis_ws/src/sensorFusion/lidar_camera_object_association/rviz/: fusion.rviz
thesis_ws/src/sensorFusion/lidar_camera_object_association/src/: association_node.cpp
(+8 files in other folders)
