<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lidar_camera_fusion_pcl</name>
  <version>0.0.0</version>
  <description>
    Point cloud merge fusion between RS-LiDAR H16P (/rslidar_points)
    and ZED 2i (/zed/zed_node/point_cloud/cloud_registered).
    Both clouds are transformed to a common frame via TF2 and concatenated.
  </description>
  <maintainer email="anforero@unal.edu.co">fore</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 core -->
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <!-- Messages -->
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- TF2 -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Point Cloud Library -->
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

  <!-- Time sync -->
  <depend>message_filters</depend>

  <!-- Test -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rclcpp_components qt="pluginlib" plugin="plugins.xml" />
  </export>
</package>
